# FPGA_Code

./: FPGA_prj.al  README.md  vitis-hls.md  提示词模板.md
DDR/: FPGA_DDR.al
DDR/log/: td_2025-09-19_11-15-41.logw  td_2025-09-19_11-20-16.logw
DDR/uisrc/01_rtl/: system_ddr.v
FIR/_ide/: .peers.ini  workspace_journal.py  workspace_journal_8843.py
FIR/build_linux/: run_hls.tcl  vivado.jou
FIR/build_linux/lk_prj/: hls.app
FIR/build_linux/lk_prj/solution1/: solution1.aps  solution1.directive  solution1_data.json
FIR/build_linux/lk_prj/solution1/impl/ip/drivers/fir_top_v1_0/src/: CMakeLists.txt  xfir_top.c  xfir_top.h  xfir_top_hw.h
FIR/lab4_vivado/: design_1_wrapper.xsa  lab4_vivado.xpr
FIR/lab4_vivado/lab4_vivado.cache/wt/: synthesis.wdf  (+1 more)
FIR/src/: coeff.npy  fir.cpp  fir.h  fir_tb.cpp  lab4.bit  lab4.hwh  lab4.ipynb  x.npy
Gaussian_blur/lab5_src/notebook/: gaussian_blur.bit  gaussian_blur.hwh  lab5.ipynb
Gaussian_blur/src/: gaussian_blur.cpp  gaussian_blur_tb.cpp
LucasKanade/: readme.md
LucasKanade/build_linux/: run_hls.tcl
LucasKanade/src/: LKof_main.cpp  lk_define.h  lk_hls.cpp  lk_hls.h
LucasKanade/sw_lk/: MH_04_difficult.txt  create_test_images.py  lk.py
UDP/: FPGA_UDP.al
UDP/log/: td_2025-09-19_11-16-41.logw
UDP/uisrc/01_rtl/: system_udp.v
Vitis_Libraries-2024.2/vision/: README.md
Vitis_Libraries-2024.2/vision/L2/: README.md
Vitis_Libraries-2024.2/vision/L3/: README.md
Vitis_Libraries/vision/: README.md
log/: td_2025-09-19_10-57-58.logw
test/src/: define.h  key.cpp  key.h  key_led.cpp  key_led.h  led.cpp  led.h  test.cpp
(+418 files in other folders)
